# Atlas-Reconfiguration

./: Cargo.toml
.github/actions/checkout-dependencies/: action.yml
.github/workflows/: pull-request.yaml
src/: lib.rs
src/config/: mod.rs
src/message/: mod.rs
src/message/signatures/: mod.rs
src/metrics/: mod.rs
src/network_reconfig/: mod.rs
src/quorum_config/: mod.rs
src/quorum_config/client/: mod.rs
src/quorum_config/network/: mod.rs
src/quorum_config/operations/: client_notify_quorum_op.rs  mod.rs  notify_stable_quorum.rs  propagate_quorum_info.rs  quorum_accept_op.rs  quorum_info_op.rs  quorum_join_op.rs
src/quorum_config/replica/: enter_quorum.rs  mod.rs  quorum_member.rs
src/quorum_reconfig/: mod.rs
src/quorum_reconfig/node_types/: client.rs  mod.rs  replica.rs  replica_v2.rs
src/quorum_reconfig/node_types/operations/: quorum_info_op.rs  quorum_join_op.rs
src/quorum_reconfig/ordered_bcast/: mod.rs
src/quorum_reconfig/threshold_negotiation/: mod.rs
src/threshold_crypto/: mod.rs
src/threshold_crypto/network/: mod.rs
src/threshold_crypto/ordered_bcast/: mod.rs  network.rs
src/threshold_crypto/threshold_negotiation/: mod.rs  network_bridge.rs
