[package]
name = "atlas-reconfiguration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

serialize_serde = ["atlas-common/serialize_serde", "atlas-communication/serialize_serde", "atlas-core/serialize_serde"]
serialize_capnp = []

default = ["serialize_serde"]

[dependencies]
anyhow = "1.0"
thiserror = "*"
getset = "*"
lazy_static = "1"

atlas-common = { path = "../Atlas-Common" }
atlas-metrics = { path = "../Atlas-Metrics" }
atlas-communication = {path = "../Atlas-Communication"}
atlas-core = {path = "../Atlas-Core"}

futures = "*"

tracing = "*"

bincode = "2.0.0-rc.3"
serde = {version = "1"}
either = "*"